--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<html><html><body><h1>Scicloj knowledge garden: a memex?</h1><p>We'll see!</p><p>Source: <a href="https://github.com/teodorlu/scicloj-garden-experiment">github.com/teodorlu/scicloj-garden-experiment</a></p></body></html></html>
+<html><head><title>Scicloj knowledge garden: a memex?</title></head><body><h1>Scicloj knowledge garden: a memex?</h1><p>We'll see!</p><p>Source: <a href="https://github.com/teodorlu/scicloj-garden-experiment">github.com/teodorlu/scicloj-garden-experiment</a></p></body></html>
