actually render a minimal version of this

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<html><head><title>Scicloj knowledge garden: a memex?</title></head><body><h1>Scicloj knowledge garden: a memex?</h1><p>We'll see!</p><p>Source: <a href="https://github.com/teodorlu/scicloj-garden-experiment">github.com/teodorlu/scicloj-garden-experiment</a></p></body></html>
+<html><head><title>Scicloj knowledge garden: a memex?</title></head><body><h1>Scicloj knowledge garden: a memex?</h1><p>We'll see!</p><p>Source: <a href="https://github.com/teodorlu/scicloj-garden-experiment">github.com/teodorlu/scicloj-garden-experiment</a></p><p>Pages:</p><ul><li><a href="/scicloj-curmap-draft/">scicloj-curmap-draft</a></li></ul></body></html>
